main/default/objects/OAuthSettings__mdt/OAuthSettings__mdt.object-meta.xml
<CustomObject>
    <label>OAuthSettings</label>
    <pluralLabel>OAuthSettings</pluralLabel>
</CustomObject>