main/default/objects/OAuthSettings__mdt/fields/CloudId__c.field-meta.xml
<CustomField>
    <fullName>CloudId__c</fullName>
    <label>CloudId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>