main/default/objects/OAuthSettings__mdt/fields/Extended_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Extended_Client_Secret__c</fullName>
    <label>Extended Client Secret</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>