main/default/objects/OAuthSettings__mdt/fields/Extended_Scope__c.field-meta.xml
<CustomField>
    <fullName>Extended_Scope__c</fullName>
    <label>Extended Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>